--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Часть приложения андроид использующее ExpandableRecyclerView
+#GagSdDvdStoreTwoRecView
+This part of the code describes how to apply RecyclerView and Parcelable ogject.
